# Alian-Software-Company-RAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: app.js  package.json  server.js
backend/chroma/: chromaService.js
backend/controllers/: adminConfigController.js  adminWebsiteController.js  authController.js  chatController.js  dashboardController.js  guardrailsController.js  meController.js  promptSettingsController.js  queryController.js  sessionController.js  subscriptionController.js  userController.js  websiteController.js  widgetController.js
backend/middleware/: authMiddleware.js
backend/rag_core/: promptSettingsService.js  queryService.js
backend/routes/: adminRoutes.js  adminWebsiteRoutes.js  authRoutes.js  chatRoutes.js  dashboardRoutes.js  guardrailsRoutes.js  meRoutes.js  promptSettingsRoutes.js  queryRoutes.js  sessionRoutes.js  subscriptionRoutes.js  userRoutes.js  websiteRoutes.js  widgetRoutes.js
backend/services/: adminConfigService.js  authService.js  (+8 more)
config/: admin_config.py  config.yaml  constants.py  logging_setup.py  paths.py  settings.py
data/: admin_config.json  prompt_settings.json
docs/: STRUCTURE.md  plan.md
frontend/: index.html  tailwind.config.js
frontend-voltagent/: package.json  tailwind.config.js
rag/: __init__.py  query_engine.py
scripts/: __init__.py  query_rag.py  run_chunking_pipeline.py  run_cleaner.py  run_crawler.py  run_embedding_pipeline.py  run_metadata_pipeline.py  run_parser.py  run_pipeline.py  run_sitemap_pipeline.py  run_vectordb_pipeline.py  setup_ollama_path.ps1
(+144 files in other folders)
