[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "website-rag-ingestion"
version = "0.1.0"
description = "Website RAG ingestion pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config*",
    "rag*",
    "scripts*",
]
